--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,9 @@
-.body{
+body{
     margin: center;
 }
+table, th, td {
+    border: 1px solid black;
+  }
 .cabecalho{
     font-size: 15px;
     padding: 10px 10px;
